:art: feat: responsividade

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <h1 class="titulo">Pomodoro timer | fmota.dev</h1>
+  <h1 class="titulo">Pomodoro Timer | fmota.dev</h1>
   <div class="container-principal">
     <div class="principal">
       <div class="container">
